--- a/templates/index.html
+++ b/templates/index.html
@@ -138,7 +138,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             var resultDiv = document.getElementById("result");
             {% if wynik %}
-                resultDiv.style.display = 'block';
+                resultDiv.style.display = 'block'; // Pokazuje wyniki
             {% endif %}
         });
     </script>
